重构GamePlayer类